# sulci-nonfree

./: CMakeLists.txt  README.md  TODO  project_info.cmake  sigraph.bcg  sulci-private.bcg
anafold/: CMakeLists.txt  anafold.bcg
anafold/doxygen/: CMakeLists.txt
anafold/shared/po/fr/: anafold.ts
anafold/src/: CMakeLists.txt
anafold/src/lib/: CMakeLists.txt
anafold/src/lib/fgraph/: afgHelpers.cc  afgHelpers.h  afgraph.cc  afgraph.h  fgMethod.cc  fgMethod.h  qwAnnealParams.cc  qwAnnealParams.h  qwFFusionCtrl.cc  qwFFusionCtrl.h
anafold/src/lib/module/: anafold.cc
neuron/src/: CMakeLists.txt  src.pro
neuron/src/lib/: CMakeLists.txt  neuron.pro
neuron/src/lib/gauss/: gaussian.cc  gaussian.h  gaussnet.cc  gaussnet.h
neuron/src/lib/koho/: kohonen.cc  kohonen.h
neuron/src/lib/mlp/: lelm.cc  lelm.h  link.cc  link.h  misc.cc  misc.h  mlp.cc  mlp.h  net.cc  net.h  pat.cc  pat.h  unit.cc  unit.h
neuron/src/lib/rand/: rand.cc  rand.h
neuron/src/lib/stream/: readstream.cc  readstream.h
neuron/src/neurlearn/: CMakeLists.txt  learn.cc  learn.pro
neuron/src/neurmakenet/: CMakeLists.txt  makenet.cc  makenet.pro
neuron/src/neurpatimport/: CMakeLists.txt  patimport.cc  patimport.pro
pysigraph/: CMakeLists.txt  config-local.template  pysigraph.bcg
pysigraph/doc/: CMakeLists.txt
pysigraph/doc/examples/: __init__.py  descriptors.py  readDataBase-datamind.py  readDataBase.py  sulci.data  sulci.minf
pysigraph/python/: CMakeLists.txt
pysigraph/python/datamind/: __init__.py
pysigraph/python/datamind/core/: __init__.py  dataFrame.py  dmShared.py  dmarray.py  url.py  utilsFile.py  utilsStruct.py
pysigraph/python/datamind/io/: __init__.py  csvIO.py  objIO.py  old_csvIO.py
pysigraph/python/datamind/ml/: __init__.py  mlObject.py  model.py  scaling.py  wip.py
pysigraph/python/datamind/stats/: __init__.py  basic.py  design.py
pysigraph/python/datamind/tools/: __init__.py  message.py
pysigraph/python/sigraph/: __init__.py  cover.py  error.py  grid_io.py  learning.py  models.py  nrj.py  test_models.py
pysigraph/python/sigraph/datamind_backend/: __init__.py  dbSi.py  modelsSi.py  readerSi.py
pysigraph/python/sigraph/db/: _test.py
pysigraph/python/sigraph/plugins/: sisvm.py
pysigraph/python/sulci/capsul/: spam_learn_global_registration.py  spam_learn_global_registration_for_loo.py  spam_learn_label_priors.py  spam_learn_label_priors_for_loo.py  (+22 more)
pysigraph/scripts/: CMakeLists.txt
pysigraph/scripts/sigraph/: README  annealing_tag.py  bayesian-relax.py  bv_get_sulci_models.py  clean_graphmodel.py  compare_spam_distributions.py  create_graphmodel.py  create_segment_databases.py  create_voxels_databases.py  independent_tag.py  learn_gaussians_distributions.py  learn_gaussians_priors.py  learn_labels_priors.py  learn_priors.py  learn_relations.py  learn_spam_blur.py  learn_spams_distributions.py  learn_supervised_sulci.py  learn_unsupervised_sulci.py  learn_voxels_distributions.py  propagation_tag.py  propagration_tag.py
pysigraph/src/: CMakeLists.txt  src.pro
pysigraph/src/libpysigraph/: CMakeLists.txt  pysigraph.cc  pysigraph.h  pysigraph.pro
pysigraph/src/si_libsvm/: CMakeLists.txt  si_libsvm.c
pysigraph/src/si_swig_libsvm/: CMakeLists.txt  si_swig_libsvm.i
pysigraph/src/sip/: CMakeLists.txt  adaptive.h  anneal.sip  cgraph.sip  clique.h  clique.sip  cliquedescr.sip  dimreductor.sip  finder.sip  fold.sip  generatedtypes.py  learnable.h  learnable.sip  learner.sip  learnparam.sip  mgraph.sip  model.sip  optimizer.sip  si.sip  sigraph.sip  sip.pro  subadaptive.sip  trainer.sip  translator.sip  typessub.py
pysigraph/src/sip_svm/: CMakeLists.txt  sigraphsvm.sip  sipsvm.pro  subadsvm.sip
pysigraph/tests/: CMakeLists.txt
pysigraph/tests/pysigraph/: create_dblearnable_from_arrays.py  read_mod.py  test_model_rd.py
sigraph/src/: CMakeLists.txt  src.pro
sigraph/src/bundle_sisvm/: CMakeLists.txt  bundlesisvm.pro
sigraph/src/lib/: CMakeLists.txt  sigraph.pro
sigraph/src/libsigraphsvm/: CMakeLists.txt  sisvm.pro
sigraph/src/libsvm/: CMakeLists.txt  libsvm.cc  libsvm.h
sigraph/src/readFolds/: readFolds.cc  readFolds.pro
sigraph/src/siChangeModels/: siChangeModels.cc  siChangeModels.pro
sigraph/src/siCopyNames/: main.cc  siCopyNames.pro
sigraph/src/siDivNamelist/: siDivNamelist.cc  siDivNamelist.pro
sigraph/src/siDomTrain/: siDomTrain.cc  siDomTrain.pro
sigraph/src/siEnergy/: siEnergy.cc  siEnergy.pro
sigraph/src/siError/: siError.cc  siError.pro
sigraph/src/siErrorStats/: siErrorStats.cc  siErrorStats.pro
sigraph/src/siFlip/: siFlip.cc  siFlip.pro
sigraph/src/siFunctionalGraphs/: functionalGraphs.pro  main.cc
sigraph/src/siGraph2Label/: jfgGraph2label.cc  siGraph2label.pro
sigraph/src/siLearn/: siLearn.cc  siLearn.pro
sigraph/src/siLyxErrors/: siLyxErrors.cc  siLyxErrors.pro
sigraph/src/siMakeColoredHierarchy/: main.cc  makeStatHierarchy.pro
sigraph/src/siMakeModel/: siMakeModel.cc  siMakeModel.pro
sigraph/src/siMakeParcellationHierarchy/: main.cc  makeHierarchy.pro
sigraph/src/siMergeModels/: siMergeModels.cc  siMergeModels.pro
sigraph/src/siMeshSulciOperture/: main.cc  meshSulcus.pro
sigraph/src/siMeshSulciProjection/: main.cc  meshSulcus.pro
sigraph/src/siMkModelEdges/: siMkModelEdges.cc  siMkModelEdges.pro
sigraph/src/siMorpho/: siMorpho.cc  siMorpho.pro
sigraph/src/siMultilabelCompare/: siMultilabelCompare.cc  siMultilabelCompare.pro
sigraph/src/siPIDcommand/: PIDcommand.cc  PIDcommand.pro
sigraph/src/siParcellation/: main.cc  meshParcellation.pro
sigraph/src/siPutTextureInModel/: siPutTextureInModel.cc  siPutTextureInModel.pro
sigraph/src/siRelax/: siRelax.cc  siRelax.pro
sigraph/src/siRevert/: siRevert.cc  siRevert.pro
sigraph/src/siSulcalParcellation/: main.cc  meshParcellation.pro
sigraph/src/siTestModels/: siTestModels.cc  siTestModels.pro
sigraph/src/siTestNet/: sitestnet.cc  sitestnet.pro
sigraph/src/siTriangModel/: main.cc  siTriangModel.pro
sigraph/src/siTryGauss/: tryGauss.cc  tryGauss.pro
sigraph/src/sigraph-config/: sigraph-config.cc  sigraph-config.pro
(+533 files in other folders)
