ADD_SUBDIRECTORY(libpysigraph)
ADD_SUBDIRECTORY(sip)
if(SVM_FOUND)
  ADD_SUBDIRECTORY(si_libsvm)
  if( SWIG_FOUND )
    find_file( LIBSVM_SWIG_DIR "svmc.i" )
    if( LIBSVM_SWIG_DIR )
      ADD_SUBDIRECTORY(si_swig_libsvm)
    endif()
  endif()
  ADD_SUBDIRECTORY(sip_svm)
else()
  message( "WARNING: sip_svm wil not be built because of dependencies: SVM_FOUND=\"${SVM_FOUND}\"" )
endif()
